--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -29,8 +29,25 @@ input:-webkit-autofill {
 .btn:focus{
     box-shadow: 0 0 0 0;
 }
+.flash-message-block{
+    z-index: 1;
+    padding-top: 15vh;
+    position: relative;
+}
+.flash-message{
+    position: absolute;
+    width: 50%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
 .mt-8{
     margin-top: 8vh;
+}
+.mt--7{
+    margin-top: -7vh;
 }
 .mb-8{
     margin-bottom: 8vh;
@@ -44,6 +61,9 @@ input:-webkit-autofill {
 
 .d-grid{
     display: grid;
+}
+.hidden {
+    display:none;
 }
 .home-img{
     height: 92vh;
@@ -112,8 +132,5 @@ input:-webkit-autofill {
         left: 50%;
         transform: translate(-10%, 100%);
     }
-}
-.hidden {
-    display:none;
 }
 
