--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1 class="text-center mt-md-15 mb-5 d-none d-md-block">Registration</h1>
+    <h1 class="text-center {{ appFlashes|length > 0 ? 'mt-5' : 'mt-md-15' }} mb-5 d-none d-md-block">Registration</h1>
     {{ form_start(form, {'attr': {'class': 'container-fluid text-center register my-4'}}) }}
     <div class="row h-100">
         <div class="col-11 col-md-6 mx-auto my-4 border">
