--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
     {% if not app.user %}
         <form class="container-fluid text-center register my-5" method="post">
             {% if error %}
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                <div class="alert alert-danger w-50 mx-auto">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
             <div class="row h-100">
                 <div class="col-11 col-md-6 mx-auto my-4 border">
