--- a/templates/base/header.html.twig
+++ b/templates/base/header.html.twig
@@ -10,7 +10,7 @@
                     <span class="nav-link text-dark"> | </span>
                 </li>
                 <li class="nav-item d-flex">
-                    <a class="nav-link" href="#">Tricks</a>
+                    <a class="nav-link {% if current_menu is defined and current_menu == 'tricks' %}active{% endif %}" href="{{ path('tricks') }}">Tricks</a>
                     <span class="nav-link text-dark"> | </span>
                 </li>
                 {% if not app.user %}
