--- a/templates/pages/tricks.html.twig
+++ b/templates/pages/tricks.html.twig
@@ -3,4 +3,22 @@
 {% block body %}
     <h1 class="text-center {{ appFlashes|length > 0 ? 'mt-5' : 'mt-md-15' }} mb-5 d-none d-md-block">Tricks</h1>
     <a href="{{ path('tricks.new') }}" class="btn btn-primary">Créer un Tricks</a>
+
+    <div class="container-fluid">
+        <div class="row">
+            {% for trick in tricks %}
+                <div class="col-2 my-3 d-flex">
+                    <div class="w-100 p-2 row">
+                        <div class="col-12 p-2 d-flex border border-dark">
+                            <a href="#" class="trick-title mr-auto">{{ trick.title }}</a>
+                            {% if app.user.id is defined and app.user.id == trick.author.id %}
+                                <a href="#" class="px-2"><i class="fas fa-pen"></i></a>
+                                <a href="#" class="px-2"><i class="fas fa-trash-alt"></i></a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
