--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -15,25 +15,12 @@
         </div>
     </div>
     <div class="collapse container-fluid" id="trickList">
-        <!--<ul class="row text-center px-0 list-unstyled">
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-            <li class="col-11 col-md-2 border ml-auto mr-auto ml-md-3 my-3">Gros Cono</li>
-
-        </ul>-->
         <div class="row">
             {% for trick in tricks %}
-                <div class="col-2 my-3 d-flex">
-                    <div class="w-100 p-2 row">
+                <div class="col-20 my-3 d-flex">
+                    <div class="w-100 mx-auto p-2 row">
                         <div class="col-12 p-2 d-flex border border-dark">
-                            <a href="#" class="trick-title mr-auto">{{ trick.title }}</a>
+                            <a href="#" class="trick-title mr-auto" data-toggle="modal" data-target="#trickModal" data-whatever="{{ trick.id }}">{{ trick.title }}</a>
                             {% if app.user.id is defined and app.user.id == trick.author.id %}
                                 <a href="#" class="px-2"><i class="fas fa-pen"></i></a>
                                 <a href="#" class="px-2"><i class="fas fa-trash-alt"></i></a>
@@ -44,5 +31,7 @@
             {% endfor %}
         </div>
     </div>
+
+    {% include 'Modales/trickView.html.twig' %}
 
 {% endblock %}
