--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -28,6 +28,18 @@ input:-webkit-autofill {
     -webkit-animation-fill-mode: both;
 }
 #trick-description{
+    display: block;
+    width: 75%;
+    height: 25vh;
+    margin: 1.5rem auto;
+}
+#trick-description .form-group{
+    height: 85%;
+}
+#trick-description textarea{
+    height: 100%;
+}
+.trick-description{
     white-space: pre-wrap;
     margin: 2rem 5rem;
     text-align: justify;
@@ -61,6 +73,33 @@ input:-webkit-autofill {
     flex: 0 0 20%;
     max-width: 20%;
 }
+/*.loader-container{
+    position:relative;
+    height: 100vh;
+}
+.loader {
+    position: absolute;
+    top: calc(50% - 32px);
+    left: calc(50% - 32px);
+    transform: translate(-50%, -50%);
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}*/
 .mt-8{
     margin-top: 8vh;
 }
