--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -20,18 +20,19 @@
                 <div class="col-20 my-3 d-flex">
                     <div class="w-100 mx-auto p-2 row">
                         <div class="col-12 p-2 d-flex border border-dark">
-                            <a href="#" class="trick-title mr-auto" data-toggle="modal" data-target="#trickModal" data-whatever="{{ trick.id }}">{{ trick.title }}</a>
+                            <a href="{{ trick.id }}" class="trick-title mr-auto" data-toggle="modal" data-target="#trick-{{ trick.id }}">{{ trick.title }}</a>
                             {% if app.user.id is defined and app.user.id == trick.author.id %}
-                                <a href="#" class="px-2"><i class="fas fa-pen"></i></a>
+                                <a href="edit-{{ trick.id }}" class="px-2" data-toggle="modal" data-target="#trick-edit-{{ trick.id }}"><i class="fas fa-pen"></i></a>
                                 <a href="#" class="px-2"><i class="fas fa-trash-alt"></i></a>
                             {% endif %}
                         </div>
                     </div>
                 </div>
+                {% include 'Modales/trickView.html.twig' %}
+                {% include 'Modales/trickEdit.html.twig' %}
             {% endfor %}
         </div>
     </div>
 
-    {% include 'Modales/trickView.html.twig' %}
 
 {% endblock %}
