--- a/templates/Modales/trickEdit.html.twig
+++ b/templates/Modales/trickEdit.html.twig
@@ -21,33 +21,41 @@
                     <table class="table border border-dark">
                         <thead class="thead-dark">
                         <tr class="row mx-0">
-                            <th class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}" scope="col">Publié par</th>
-                            <th class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}" scope="col">Publié le</th>
-                            {% if not trick.datePost == trick.dateUpdate %}
-                                <th class="col-2" scope="col">Édité le</th>
+                            <th class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}" scope="col">Publié par</th>
+                            <th class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}" scope="col">Publié le</th>
+                            {% if trick.datePost != trick.dateUpdate %}
+                                <th class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% else%}col-20{% endif %}" scope="col">Édité le</th>
+                            {% endif %}
+                            {% if app.user.id is defined and app.user.id != trick.author.id %}
                                 <th class="col-2" scope="col">Édité par</th>
                             {% endif %}
-                            <th class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}" scope="col">Catégorie</th>
-                            <th class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}" scope="col">Statut</th>
+                            <th class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}" scope="col">Catégorie</th>
+                            <th class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}" scope="col">Statut</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="row mx-auto">
-                            <td class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}">{{  trick.author.username }}</td>
-                            <td class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}">{{ trick.datePost|date("d/m/Y", "Europe/Paris") }}</td>
-                            {% if not trick.datePost == trick.dateUpdate %}
-                                <td class="col-2">{{ trick.dateUpdate|date("d/m/Y", "Europe/Paris") }}</td>
+                            <td class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}">{{  trick.author.username }}</td>
+                            <td class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}">{{ trick.datePost|date("d/m/Y", "Europe/Paris") }}</td>
+                            {% if trick.datePost != trick.dateUpdate %}
+                                <td class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% else %}col-20{% endif %}">{{ trick.dateUpdate|date("d/m/Y", "Europe/Paris") }}</td>
+                            {% endif %}
+                            {% if app.user.id is defined and app.user.id != trick.author.id %}
                                 <td class="col-2">{{ trick.Editor }}</td>
                             {% endif %}
-                            <td class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}">{{ form_widget(form.category) }}</td>
-                            <td class="{% if not trick.datePost == trick.dateUpdate %}col-2{% else %} col-3{% endif %}">{{ form_widget(form.statut) }}</td>
+                            <td class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}">{{ form_widget(form.category) }}</td>
+                            <td class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}">{{ form_widget(form.statut) }}</td>
                         </tr>
                         </tbody>
                     </table>
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger">Delete</button>
+                    <form method="post" action="{{ path('trick.delete', {id: trick.id}) }}">
+                        <input type="hidden" name="_method" value="delete">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ trick.id) }}">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     <button class="btn btn-primary">Save changes</button>
                     {{ form_end(form) }}
