--- a/templates/pages/tricks.html.twig
+++ b/templates/pages/tricks.html.twig
@@ -14,7 +14,11 @@
                             <a href="{{ trick.id }}" class="trick-title mr-auto" data-toggle="modal" data-target="#trick-{{ trick.id }}">{{ trick.title }}</a>
                             {% if app.user.id is defined and app.user.id == trick.author.id %}
                                 <a href="edit-{{ trick.id }}" class="px-2" data-toggle="modal" data-target="#trick-edit-{{ trick.id }}"><i class="fas fa-pen"></i></a>
-                                <a href="#" class="px-2"><i class="fas fa-trash-alt"></i></a>
+                                <form method="post" action="{{ path('trick.delete', {id: trick.id}) }}">
+                                    <input type="hidden" name="_method" value="delete">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ trick.id) }}">
+                                    <button class="py-0 px-2 btn btn-link text-dark"><i class="fas fa-trash-alt"></i></button>
+                                </form>
                             {% endif %}
                         </div>
                     </div>
