--- a/templates/Modales/trickEdit.html.twig
+++ b/templates/Modales/trickEdit.html.twig
@@ -20,6 +20,25 @@
                     <button class="btn btn-primary">Upload image</button>
                     {{ form_end(formImage[trick.id]) }}
 
+                    {% for image in images[trick.id] if image is not empty %}
+                    <form method="post" action="{{ path('image.edit.statut', {id: trick.id}) }}">
+                        <label for="image_id">Main picture</label>
+                        <select name="image[id]" id="image_id">
+                            <optgroup label="Choisissez l'image principale">
+                                {% for image in images[trick.id] %}
+                                    {% for i in image %}
+                                        {% if i is not empty %}
+                                            <option value="{{ i.id }}" {% if i.statut == "primary" %}selected="selected"{% endif %}>{{ i.name }}</option>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endfor %}
+                            </optgroup>
+                        </select>
+                        <input type="hidden" name="_method" value="editStatut">
+                        <button type="submit" class="btn btn-primary">Choose main picture</button>
+                    </form>
+                    {% endfor %}
+
                     {{ form_start(form) }}
                     <div class="d-block mx-auto my-2 w-50">{{ form_row(form.title) }}</div>
                     <div id="trick-description">{% if app.request.get('tricks') is not empty %}{{ form_row(form.description, {'value':app.request.get('tricks')['description']}) }}{% else %}{{ form_row(form.description) }}{% endif %}</div>
@@ -35,7 +54,6 @@
                                 <th class="col-20" scope="col">Édité par</th>
                             {% endif %}
                             <th class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-20{% elseif trick.datePost != trick.dateUpdate %}col-3{% else %}col-4{% endif %}" scope="col">Catégorie</th>
-                            <!--<th class="{#{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}#}" scope="col">Statut</th>-->
                         </tr>
                         </thead>
                         <tbody>
@@ -49,7 +67,6 @@
                                 <td class="col-20">{{ trick.Editor }}</td>
                             {% endif %}
                             <td class="{% if app.user.id is defined and app.user.id != trick.author.id %}col-20{% elseif trick.datePost != trick.dateUpdate %}col-3{% else %}col-4{% endif %}">{{ form_widget(form.category) }}</td>
-                            <!--<td class="{#{% if app.user.id is defined and app.user.id != trick.author.id %}col-2{% elseif trick.datePost != trick.dateUpdate %}col-20{% else %}col-3{% endif %}">{{ form_widget(form.statut) }}#}</td>-->
                         </tr>
                         </tbody>
                     </table>
